--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,28 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ugochukwu's Blog</title>
-</head>
+    <%- include('./partials/header.ejs') %>
 <body>
     
-    <nav>
-       <div class="style-title">
-        <a href="/"><h1>Ugo's Blog</h1></a>
-        <p>Powered by Altschool</p>
-       </div>
-       <ul>
-        <li><a href="/">Blogs</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/blogs/create">New Blog</a></li>
-       </ul>
-    </nav>
+    <%- include('./partials/nav.ejs') %>
 
     <div class="not-found content">
         OOPS, page not found :(
     </div>
+
+    <%- include('./partials/footer.ejs') %>
 
 </body>
 </html>
